--- a/mcp/websearch-mcp/pyproject.toml
+++ b/mcp/websearch-mcp/pyproject.toml
@@ -6,4 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastmcp>=2.12.2",
+    "httpx>=0.27.0",
+    "feedparser>=6.0.11",
+    "python-dateutil>=2.9.0.post0",
+    "pydantic>=2.8.2",
+    "pydantic-settings>=2.4.0",
 ]
