--- a/mcp/websearch-mcp/pyproject.toml
+++ b/mcp/websearch-mcp/pyproject.toml
@@ -12,3 +12,10 @@ dependencies = [
     "pydantic>=2.8.2",
     "pydantic-settings>=2.4.0",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
