--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,7 +8,16 @@ dependencies = [
     "fastapi[standard]>=0.116.1",
     "fastmcp>=2.12.2",
     "langchain>=0.3.27",
+    "langchain-mcp-adapters>=0.1.9",
     "langchain-openai>=0.3.33",
+    "langgraph>=0.6.7",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
