--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain>=0.3.27",
     "langchain-mcp-adapters>=0.1.9",
     "langchain-openai>=0.3.33",
+    "langfuse>=3.4.0",
     "langgraph>=0.6.7",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
