fix: vLLM에서 Ollama로 변경
- LangExtract에서 vLLM 대신 Ollama 모델 지원
- model_url 파라미터 사용으로 수정
- .env.example에 Ollama 설정 반영
- fence_output, use_schema_constraints 옵션 추가

--- a/mcp/dart-mcp/.env.example
+++ b/mcp/dart-mcp/.env.example
@@ -37,25 +37,19 @@ LLM_MAX_TOKENS=1000
 # 메인 LLM과 다른 모델 사용 가능 (예: 빠른 추출용 경량 모델)
 
 # 추출용 LLM Provider 선택
-# Option 1: vLLM Server (로컬 LLM, 빠른 응답)
-EXTRACTION_USE_VLLM=false
-EXTRACTION_VLLM_BASE_URL=http://localhost:8000/v1
-EXTRACTION_VLLM_API_KEY=dummy-key
-EXTRACTION_VLLM_MODEL_NAME=meta-llama/Llama-3.1-8B-Instruct
-
-# Option 2: LangExtract with Gemini (Google AI Studio)
+# Option 1: LangExtract with Gemini (Google AI Studio)
 # https://aistudio.google.com/apikey 에서 API 키 발급
 # EXTRACTION_USE_LANGEXTRACT=true
 # LANGEXTRACT_API_KEY=your-gemini-api-key-here
 # LANGEXTRACT_MODEL=gemini-2.0-flash-exp
 
+# Option 2: Ollama (로컬 실행, LangExtract 연동)
+EXTRACTION_USE_OLLAMA=false
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.1:8b
+
 # Option 3: 메인 OpenAI 설정 재사용
 # EXTRACTION_USE_MAIN_LLM=true  # 위의 OPENAI_API_KEY 사용
-
-# Option 4: Ollama (로컬 실행)
-# EXTRACTION_USE_OLLAMA=true
-# OLLAMA_BASE_URL=http://localhost:11434
-# OLLAMA_MODEL=llama3.1:8b
 
 # ============================================
 # 캐시 설정
