--- a/mcp/dart-mcp/pyproject.toml
+++ b/mcp/dart-mcp/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "openai>=1.99.9",
     "thefuzz>=0.22.1",
     "langextract>=1.0.8",
+    "fastmcp>=2.12.3",
 ]
 
 [project.optional-dependencies]
