--- a/mcp/websearch-mcp/pyproject.toml
+++ b/mcp/websearch-mcp/pyproject.toml
@@ -5,12 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.12.15",
     "fastmcp>=2.12.2",
     "feedparser>=6.0.12",
     "httpx>=0.27.0",
+    "lxml>=6.0.2",
     "pydantic>=2.8.2",
     "pydantic-settings>=2.4.0",
     "python-dateutil>=2.9.0.post0",
+    "selenium>=4.35.0",
 ]
 
 [build-system]
