--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -16,9 +16,15 @@ dependencies = [
     "pydantic-settings>=2.10.1",
 ]
 
+[tool.uvicorn.dev]
+host = "0.0.0.0"
+port = 8000
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
+
+
